<resources>
    <string name="app_name">TMM</string>
    <string name="marvel_text">THE\nMARVELOUS\nMARVEL</string>
    <string name="background_gif">Background gif</string>
    <string name="app_logo">logo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="get_characters">Get your favourite MARVEL characters</string>
    <string name="know_writers">Know the writers</string>
    <string name="heroes">THE HEROES</string>
    <string name="creators">THE CREATORS</string>
    <string name="universe">THE UNIVERSE</string>
    <string name="search_series">Search series by Title</string>
    <string name="search_events">Search Events by Title</string>
    <string name="search_comics">Search comics by Title</string>
    <string name="search_creators">Search creators by Name</string>
    <string name="search_characters">Search characters by Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>