<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tmm.views.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_allItemsFragment"
            app:destination="@id/allItemsFragment"
            app:popUpTo="@id/allItemsFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="listType"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_navigation_home_to_detailedItemFragment_creator"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true">

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.Creator" />

        </action>

        <action
            android:id="@+id/action_navigation_home_to_detailedItemFragment_character"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true">

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.Character" />
        </action>


        <action
            android:id="@+id/action_navigation_home_to_detailedItemFragment_comic"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true">

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelComic" />
        </action>

        <action
            android:id="@+id/action_navigation_home_to_detailedItemFragment_event"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true">

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelEvent" />
        </action>

        <action
            android:id="@+id/action_navigation_home_to_detailedItemFragment_series"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true">

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelSeries" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.tmm.views.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_detailedItemFragment_character"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.Character" />
        </action>
        <action
            android:id="@+id/action_navigation_search_to_detailedItemFragment_creator"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.Creator" />
        </action>
        <action
            android:id="@+id/action_navigation_search_to_detailedItemFragment_comic"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelComic" />
        </action>
        <action
            android:id="@+id/action_navigation_search_to_detailedItemFragment_event"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelEvent" />
        </action>
        <action
            android:id="@+id/action_navigation_search_to_detailedItemFragment_series"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >

            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelSeries" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.tmm.views.fragments.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.tmm.views.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/allItemsFragment"
        android:name="com.example.tmm.views.fragments.AllItemsFragment"
        android:label="fragment_all_items"
        tools:layout="@layout/fragment_all_items">
        <action
            android:id="@+id/action_allItemsFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_allItemsFragment_to_detailedItemFragment_character"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >
            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.Character" />

        </action>
        <action
            android:id="@+id/action_allItemsFragment_to_detailedItemFragment_creator"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >
            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.Creator" />

        </action>
        <action
            android:id="@+id/action_allItemsFragment_to_detailedItemFragment_comic"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >
            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelComic" />

        </action>
        <action
            android:id="@+id/action_allItemsFragment_to_detailedItemFragment_series"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >
            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelSeries" />

        </action>
        <action
            android:id="@+id/action_allItemsFragment_to_detailedItemFragment_event"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" >
            <argument
                android:name="item"
                app:argType="com.example.tmm.domain.model.MarvelEvent" />

        </action>
    </fragment>
    <fragment
        android:id="@+id/detailedItemFragment"
        android:name="com.example.tmm.views.fragments.DetailedItemFragment"
        android:label="DetailedItemFragment">
        <action
            android:id="@+id/action_detailedItemFragment_to_allItemsFragment"
            app:destination="@id/allItemsFragment"
            app:popUpTo="@id/allItemsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_detailedItemFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_detailedItemFragment_to_navigation_search"
            app:destination="@id/navigation_search"
            app:popUpTo="@id/navigation_search"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>